updated tests for interactor